# django-vue-site

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: codeformatting.yml  unittests.yml
backend/backend/: settings.py  urls.py
backend/polls/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/polls/migrations/: 0001_initial.py
backend/polls/static/polls/: style.css
backend/polls/templates/polls/: base.html  detail.html  index.html  results.html
frontend/src/components/: QuestionList.vue  QuestionSummary.vue
frontend/src/router/: index.js
frontend/src/views/: About.vue  Home.vue  QuestionDetail.vue  QuestionResults.vue
