[tool.poetry]
name = "django-site"
version = "0.1.0"
description = "Test Django site"
authors = ["orvis evans <b.orvis@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "\b3.1.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
