[tool.poetry]
name = "django-site"
version = "0.1.0"
description = "Test Django site"
authors = ["orvis evans <b.orvis@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.5"
Django = "\b3.1.4"
django-environ = "^0.4.5"
djangorestframework = "^3.12.2"
django-cors-headers = "^3.6.0"
drf-flex-fields = "^0.8.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
